@@ -1,5 +1,11 @@
 2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>
 
+	Dave Jones suggested this change.
+
+	* module/x86/opr_model_p4.c: remove superflous ';' at end of some macro
+
+2003-08-14  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libutil++/string_manip.h: remove erase_from_last_of()
 	* libutil++/string_manip.cpp: and tidy erase_to_last_of(), rtrim() and
 	  ltrim()
